# IMlab-Agent

./: .gitignore  AGENTS.md  IRI_CHECKLIST.md  QUICKSTART.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: USER_GUIDE.md
plugins/imlab/: .mcp.json
plugins/imlab/.claude-plugin/: plugin.json
plugins/imlab/.codex-plugin/: plugin.json
plugins/imlab/skills/imlab-configuring/: SKILL.md
plugins/imlab/skills/imlab-demo/: SKILL.md
plugins/imlab/skills/imlab-monitoring-jobs/: SKILL.md
plugins/imlab/skills/imlab-reference/: SKILL.md
plugins/imlab/skills/imlab-submitting-jobs/: SKILL.md
server/: pyproject.toml  run.sh
server/imlab_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  middleware.py  models.py
server/imlab_mcp/data/: imlab_config.json  imlab_guide.md
server/imlab_mcp/data/docs_index/: chunks.json
server/imlab_mcp/rag/: embed.py  ingest.py  store.py
server/tests/: smoke.py
